# faircraftAi-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_auth.db  test_pred.db
.github/workflows/: backend-ci.yml
app/: main.py
app/db/: config.py  init_db.py
app/schemas/: user.py
docs/: ml_pipeline.md
src/api/v1/: routes_auth.py
src/app/: main.py
src/app/core/: security.py
src/app/db/: config.py
src/app/dependencies/: auth_dependencies.py  model.py
src/app/models/: __init__.py  prediction.py  user.py
src/app/routers/: authentification.py  prediction.py
src/app/schemas/: prediction.py
src/app/services/: auth_service.py  prediction_service.py
src/ml/: data_pipeline.py  eda.ipynb  etl_pipeline.py  external_advisor.py  external_service.py  scrape_etsy.py  train_model.py
src/ml/models/: category_encoder.joblib  faircraft_price_predictor.joblib  price_model.joblib  scaler.joblib
src/ml/notebook/: eda.ipynb  generate_eda.py
tests/: test_auth.py  test_prediction.py
